--- a/capstone-PRACTICE-SPLIT_ISSUE.ipynb
+++ b/capstone-PRACTICE-SPLIT_ISSUE.ipynb
@@ -5807,7 +5807,6 @@
    ],
    "source": [
     "ggu = pd.merge(gg,unempca,on=['County','Year','Postal'])\n",
-    "# ,'Postal'\n",
     "ggu.head()"
    ]
   },
@@ -5836,33 +5835,339 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1478,
+   "execution_count": 661,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "You are trying to merge on int64 and object columns. If you wish to proceed you should use pd.concat",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1478-03b7bb3d540f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdisease\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Year'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\reshape\\merge.py\u001b[0m in \u001b[0;36mmerge\u001b[1;34m(left, right, how, on, left_on, right_on, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[0;32m     59\u001b[0m                          \u001b[0mright_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mright_index\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msort\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msuffixes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msuffixes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m                          \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindicator\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mindicator\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 61\u001b[1;33m                          validate=validate)\n\u001b[0m\u001b[0;32m     62\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\reshape\\merge.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, left, right, how, on, left_on, right_on, axis, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[0;32m    553\u001b[0m         \u001b[1;31m# validate the merge keys dtypes. We may need to coerce\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    554\u001b[0m         \u001b[1;31m# to avoid incompat dtypes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 555\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_maybe_coerce_merge_keys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    556\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    557\u001b[0m         \u001b[1;31m# If argument passed to validate,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\reshape\\merge.py\u001b[0m in \u001b[0;36m_maybe_coerce_merge_keys\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    981\u001b[0m             elif ((is_numeric_dtype(lk) and not is_bool_dtype(lk))\n\u001b[0;32m    982\u001b[0m                     and not is_numeric_dtype(rk)):\n\u001b[1;32m--> 983\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    984\u001b[0m             elif (not is_numeric_dtype(lk)\n\u001b[0;32m    985\u001b[0m                     and (is_numeric_dtype(rk) and not is_bool_dtype(rk))):\n",
-      "\u001b[1;31mValueError\u001b[0m: You are trying to merge on int64 and object columns. If you wish to proceed you should use pd.concat"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County</th>\n",
+       "      <th>Postal</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP</th>\n",
+       "      <th>GDPgrowth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>97646410</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alpine</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>80465</td>\n",
+       "      <td>-11.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Amador</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1155937</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Butte</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>6647096</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Calaveras</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>786451</td>\n",
+       "      <td>1.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      County Postal  Year       GDP GDPgrowth\n",
+       "0    Alameda     CA  2013  97646410       4.1\n",
+       "1     Alpine     CA  2013     80465     -11.8\n",
+       "2     Amador     CA  2013   1155937       4.5\n",
+       "3      Butte     CA  2013   6647096       3.9\n",
+       "4  Calaveras     CA  2013    786451       1.9"
+      ]
+     },
+     "execution_count": 661,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.merge(disease, gg, on='Year')\n",
+    "gg.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 664,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP</th>\n",
+       "      <th>GDPgrowth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>97646410</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alpine</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>80465</td>\n",
+       "      <td>-11.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Amador</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1155937</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Butte</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>6647096</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Calaveras</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>786451</td>\n",
+       "      <td>1.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      County  Year       GDP GDPgrowth\n",
+       "0    Alameda  2013  97646410       4.1\n",
+       "1     Alpine  2013     80465     -11.8\n",
+       "2     Amador  2013   1155937       4.5\n",
+       "3      Butte  2013   6647096       3.9\n",
+       "4  Calaveras  2013    786451       1.9"
+      ]
+     },
+     "execution_count": 664,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gg.drop('Postal',axis=1).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 665,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Disease</th>\n",
+       "      <th>County</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Count</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Rate</th>\n",
+       "      <th>CI. lower</th>\n",
+       "      <th>CI.upper</th>\n",
+       "      <th>Unstable</th>\n",
+       "      <th>Postal</th>\n",
+       "      <th>GDP</th>\n",
+       "      <th>GDPgrowth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Amebiasis</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>17</td>\n",
+       "      <td>5127242</td>\n",
+       "      <td>0.332</td>\n",
+       "      <td>0.193</td>\n",
+       "      <td>0.531</td>\n",
+       "      <td>*</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>630438094</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Amebiasis</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>73</td>\n",
+       "      <td>10124684</td>\n",
+       "      <td>0.721</td>\n",
+       "      <td>0.565</td>\n",
+       "      <td>0.907</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>630438094</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Amebiasis</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>56</td>\n",
+       "      <td>4997442</td>\n",
+       "      <td>1.121</td>\n",
+       "      <td>0.846</td>\n",
+       "      <td>1.455</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>630438094</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Anaplasmosis and Ehrlichiosis</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10124684</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.036</td>\n",
+       "      <td>-</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>630438094</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Anaplasmosis and Ehrlichiosis</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5127242</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.072</td>\n",
+       "      <td>-</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>630438094</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Disease       County  Year     Sex  Count  \\\n",
+       "0                      Amebiasis  Los Angeles  2014  Female     17   \n",
+       "1                      Amebiasis  Los Angeles  2014   Total     73   \n",
+       "2                      Amebiasis  Los Angeles  2014    Male     56   \n",
+       "3  Anaplasmosis and Ehrlichiosis  Los Angeles  2014   Total      0   \n",
+       "4  Anaplasmosis and Ehrlichiosis  Los Angeles  2014  Female      0   \n",
+       "\n",
+       "   Population   Rate  CI. lower  CI.upper Unstable Postal        GDP GDPgrowth  \n",
+       "0     5127242  0.332      0.193     0.531        *     CA  630438094         4  \n",
+       "1    10124684  0.721      0.565     0.907      NaN     CA  630438094         4  \n",
+       "2     4997442  1.121      0.846     1.455      NaN     CA  630438094         4  \n",
+       "3    10124684  0.000      0.000     0.036        -     CA  630438094         4  \n",
+       "4     5127242  0.000      0.000     0.072        -     CA  630438094         4  "
+      ]
+     },
+     "execution_count": 665,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.merge(disease, gg, on=['Year','County'])\n",
     "df.head()"
    ]
   },
