--- a/racial discrimination.ipynb
+++ b/racial discrimination.ipynb
@@ -1091,48 +1091,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_ls, sim = [], 1000\n",
-    "for i in range(sim):\n",
-    "    samB = np.random.choice(call_b, replace=True, size=len(call_b))\n",
-    "# 2435 samples, 1000 times\n",
-    "    samW = np.random.choice(call_w, replace=True, size=len(call_w))\n",
-    "    for i, j in zip(samW,samB):\n",
-    "        if i == 1.0 and j == 0.0:\n",
-    "            ind = 1\n",
-    "            new_ls.append(ind)\n",
-    "        else:\n",
-    "            ind = 0\n",
-    "            new_ls.append(ind)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.09058480492813141"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_val = np.sum(new_ls)/2435000\n",
-    "p_val\n",
-    "# do not reject the null hypothesis, the p value is > .05 "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 127,
    "metadata": {},
    "outputs": [],
@@ -1218,6 +1176,31 @@
     "prop\n",
     "# proportion of successes to total trials, successes and failures\n",
     "# or proportion of call backs for blacks to blacks and whites "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "107    1\n",
+       "126    1\n",
+       "171    1\n",
+       "200    1\n",
+       "259    1\n",
+       "Name: call, dtype: int32"
+      ]
+     },
+     "execution_count": 282,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "callb[callb == 1].head()"
    ]
   },
   {
@@ -2523,6 +2506,7 @@
     }
    ],
    "source": [
+    "# EXAMPL\n",
     "import numpy as np\n",
     "from statsmodels.stats.proportion import proportions_ztest\n",
     "count = np.array([5, 12])\n",
