--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -616,7 +616,7 @@
     "\n",
     "# the slope appears to stabilize after 4, so 4 is our optimal k\n",
     "\n",
-    "# INQUIRE ABOUT THE ELBPW METHOD "
+    "# INQUIRE ABOUT THE ELBOW METHOD "
    ]
   },
   {
@@ -898,7 +898,6 @@
     }
    ],
    "source": [
-    "# WATCH K MEANS VIDEOS ON DATACAMP\n",
     "\n",
     "# Your turn.\n",
     "seed2 = 2\n",
@@ -927,11 +926,9 @@
     "    silhouette = silhouette_score(x_cols, labels)\n",
     "    print(\"for n_clusters =\", k,\n",
     "          \", the average silhouette_score =\", silhouette)\n",
-    "    # IS THIS REALLY COMPUTING AN AVERAGE OF SILHOUETTE SCORES ???\n",
     "    \n",
     "    # Compute the silhouette scores for each sample\n",
     "    sample_silhouette_values = silhouette_samples(x_cols, labels)\n",
-    "    # WHAT DOES THIS MEAN ??? COMPUTE FOR EACH SAMPLE ???\n",
     "    \n",
     "    y_lower = 10\n",
     "    for i in range(k):\n",
@@ -1008,9 +1005,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# WHAT'S GOING ON WITH THE GAP STATISTIC ???\n",
-    "# NOT UNDERSTANDING FORMULA \n",
-    "# EXPECTATION OF THE LOG CONFUSES ME"
    ]
   },
   {
@@ -1102,7 +1096,6 @@
     "plt.scatter(df['x'], df['y'], c=labels)\n",
     "plt.show()\n",
     "\n",
-    "# EXPLAIN TO ME WHAT I'VE DONE HERE"
    ]
   },
   {
@@ -1772,7 +1765,7 @@
     }
    ],
    "source": [
-    "models = [AffinityPropagation(),SpectralClustering(), AgglomerativeClustering()]\n",
+    "models = [AffinityPropagation(), SpectralClustering(), AgglomerativeClustering()]\n",
     "\n",
     "for model in models:\n",
     "    labs = model.fit_predict(x_cols)\n",
@@ -1803,7 +1796,6 @@
     }
    ],
    "source": [
-    "# WHATS GOING ON WITH THE LABS ARRAY ???\n",
     "labs"
    ]
   },
